--- a/No4/part40.tex
+++ b/No4/part40.tex
@@ -3,10 +3,10 @@
 \mysection{手作業での修正とシミュレーション}
 
 \vspace*{1zh}
-　2つ目の小細工です。
-出力されたファイルをメモ帳などのエディタで開き、順番に末尾へ追加します。
-結合部分でM30を取り除いたりZ軸原点復帰を入れるなど、適宜変更してください。
-今回のメインテーマであるワーク座標系設定の埋め込みも忘れずに。
+　2つ目の小細工です．
+出力されたファイルをメモ帳などのエディタで開き，順番に末尾へ追加します．
+結合部分でM30を取り除いたりZ軸原点復帰を入れるなど，適宜変更してください．
+今回のメインテーマであるワーク座標系設定の埋め込みも忘れずに．
 
 \begin{lstlisting}[caption=編集後のNCプログラム,numbers=none,label=lst:gcode.txt]
 %
@@ -32,27 +32,28 @@ G91G28Z0
 以下省略
 \end{lstlisting}
 
-　次にNCVCの［工作機械の設定］でワーク座標系のオフセットを設定します。
-今回はCADデータに合わせて図\ref{fig:work} のように設定しました。
-実際には工作機械に登録されている座標に合わせると、より現実に近い動きになると思います。
+\vspace*{1zh}
+　次にNCVCの［工作機械の設定］でワーク座標系のオフセットを設定します．
+今回はCADデータに合わせて図\ref{fig:work} のように設定しました．
+実際には工作機械に登録されている座標に合わせると，より現実に近い動きになると思います．
 
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=0.7]{No4/fig/work.png}
-%\caption{工作機械の設定（ワーク座標設定）}
-%\label{fig:work}
-%\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{No4/fig/work.png}
+\caption{工作機械の設定（ワーク座標設定）}
+\label{fig:work}
+\end{figure}
 
-　この状態で結合編集後のGコードをシミュレーションすると、図８のようになります。
+　この状態で結合編集後のGコードをシミュレーションすると，図\ref{fig:simu1} のようになります．
 
-%\begin{figure}[H]
-%\centering
-%\includegraphics[scale=0.5]{No4/fig/simu1.png}
-%\caption{結合編集後のシミュレーション結果}
-%\label{fig:simu1}
-%\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.5]{No4/fig/simu1.png}
+\caption{結合編集後のシミュレーション結果}
+\label{fig:simu1}
+\end{figure}
 
-　NCVCのシミュレーションでG28リファレンス復帰はサポートされていないので、Z軸機械原点復帰は移動していないように見えますが、これは仕様です。
-無理矢理感は否めませんが、この手順で複数の加工原点に対応した加工データの生成とそのシミュレーションができていると思います。
+　NCVCのシミュレーションでG28リファレンス復帰はサポートされていないので，Z軸機械原点復帰は移動していないように見えますが，これは仕様です．
+無理矢理感は否めませんが，この手順で複数の加工原点に対応した加工データの生成とそのシミュレーションができていると思います．
 
-　他にも手はあると思いますので、いろいろ使いこなしてみてください。
+　他にも手はあると思いますので，いろいろ使いこなしてみてください．
